--- a/src/bigBite/css/adminPpal.css
+++ b/src/bigBite/css/adminPpal.css
@@ -71,3 +71,30 @@ input[type="text"] {
   border: 1px solid #ccc;
   border-radius: 5px;
 }
+.tabs {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+
+.tabs button {
+  background-color: #f0f0f0;
+  border: 1px solid #ccc;
+  padding: 10px 20px;
+  cursor: pointer;
+  font-size: 16px;
+  margin-right: 10px;
+  transition: background-color 0.3s ease, color 0.3s ease;
+  border-radius: 5px;
+}
+
+.tabs button.active {
+  background-color: #DF1C1C;
+  color: #fff;
+  border-color: #DF1C1C;
+}
+
+.tabs button:hover {
+  background-color: #FFBA49;
+  color: #fff;
+}
