--- a/src/bigBite/css/adminPpal.css
+++ b/src/bigBite/css/adminPpal.css
@@ -62,7 +62,7 @@
   margin: 0 auto; 
   font-family: "Poppins", sans-serif;
 }
-input[type="text"] {
+/*input[type="text"] {
   padding: 10px;
   width: 100%;
   max-width: 300px;
@@ -70,7 +70,7 @@ input[type="text"] {
   display: block;
   border: 1px solid #ccc;
   border-radius: 5px;
-}
+}*/
 .tabs {
   display: flex;
   justify-content: center;
