--- a/src/bigBite/css/asientosContables.css
+++ b/src/bigBite/css/asientosContables.css
@@ -126,3 +126,12 @@
     font-size: 16px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 }
+.input-asiento[type="text"] {
+    padding: 10px;
+    width: 100%;
+    max-width: 300px;
+    margin: 20px auto;
+    display: block;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
