arreglos al modal

--- a/src/bigBite/css/asientosContables.css
+++ b/src/bigBite/css/asientosContables.css
@@ -97,7 +97,7 @@
 
 /* Estilos para el mensaje de éxito */
 .mensaje-exito {
-    background-color: #4CAF50;
+    background-color: #f3e70f;
     color: white;
     font-size: 18px;
     padding: 15px 25px;
