--- a/src/bigBite/css/adminProductos.css
+++ b/src/bigBite/css/adminProductos.css
@@ -5,11 +5,11 @@
   text-align: center;
 }
 
-select {
+select, input.input-producto {
   padding: 10px;
   font-size: 16px;
-
-  width: 300px;
+  width: 100%; /* Ajusta el ancho al 100% del contenedor */
+  box-sizing: border-box; /* Incluye padding y border en el cálculo del ancho */
 }
 
 .editar-hamburguesa {
@@ -21,7 +21,7 @@ select {
   grid-template-columns: 1fr 1fr;
   gap: 20px;
   margin: 20px auto;
-  max-width: 600px;
+  max-width: 800px; /* Aumenté el ancho máximo para dar más espacio */
 }
 
 .label-producto {
@@ -37,6 +37,7 @@ select {
   border-radius: 5px;
 }
 
+
 .content-buttons-adminProducts {
   width: 100%;
   display: flex;
@@ -47,8 +48,7 @@ select {
 }
 
 .btnRegistrarHamburguesa{
-  width: 400px;
-  grid-column: span 2;
+  width: 100%; /* Botón con ancho total del contenedor */
   padding: 10px;
   background-color: #DF1C1C;
   color: white;
@@ -62,7 +62,7 @@ select {
 }
 
 .btnModal{
-  width: 400px;
+  width: 100%; /* Botón con ancho total del contenedor */
   padding: 10px;
   background-color: rgb(236, 158, 31);
   color: white;
@@ -265,19 +265,6 @@ h2 {
 
 .btn-select:hover {
   background-color: #fca110;
-}
-
-/* Estilo para el contenedor del checkbox */
-.checkbox-container {
-    display: flex;
-    align-items: center; /* Alinear verticalmente el checkbox y el texto */
-    margin: 10px 0; /* Margen superior e inferior */
-}
-
-/* Estilo para la etiqueta del checkbox */
-.checkbox-container label {
-    margin-left: 8px; /* Espaciado entre el checkbox y la etiqueta */
-    font-size: 16px; /* Tamaño de fuente de la etiqueta */
 }
 
 .nav-categorias ul {
