--- a/src/bigBite/css/adminPpal.css
+++ b/src/bigBite/css/adminPpal.css
@@ -30,7 +30,16 @@
   margin: 0 auto;
   display: inline-block;
 }
-
+.react-datepicker__input-container .datepicker{
+  padding: 10px;
+  width: 100%;
+  max-width: 300px;
+  margin: 20px auto;
+  display: block;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  margin-left: 3px;
+}
 .detalles {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
