--- a/src/bigBite/css/GestionPedidos.css
+++ b/src/bigBite/css/GestionPedidos.css
@@ -1,16 +1,19 @@
 .contenedor{
     padding: 80px 50px;
 }
+
 .divpedidos p{
     font-family: "Poppins", sans-serif;
     font-size: 14px;
 }
+
 .buscarpedidos {
     font-size: 12px;
     width: 50vh;
     height: 30px;
     padding-left: 6px;
     margin-left: 50px;
+    margin-top: 20px;
     border: 1px solid black;
     border-radius: 3px;
     font-family: "Poppins", sans-serif;
@@ -20,12 +23,12 @@
     border: 1px solid black;
 }
 
-.botonescolor {
+/* .botonescolor {
     width: 30vh;
     margin: 15px;
     font-size: 15px;
     font-family: "Poppins", sans-serif;
-}
+} */
 
 .botonescolor:hover {
     color: white;
@@ -59,17 +62,35 @@
     border-radius: 50px;
     width: 50px;
     height: 45px;
+    margin-top: 15px;
 }
 
 .nrodeorden {
     padding: 0 40vh 0 30px;
+    margin-top: 15px;
 }
 
-.estado {
-    padding-top: 15px;
-    width: 120px;
+.div-form {
     text-align: end;
+}
 
+.form-estado {
+    font-size: 15px;
+    width: 145px;
+    height: 30px;
+    border-radius: 6px;
+    padding: 1px;
+    text-align: center;
+    /* font-size: 15px; */
+}
+
+.enviar-estado {
+    width: 45px;
+    height: 20px;
+    font-size: 12px;
+    background-color: white;
+    border-radius: 5px;
+    border: rgb(116, 115, 115) 1px solid;
 }
 
 .entregados {
@@ -77,6 +98,7 @@
     border-radius: 5px;
     padding-top: 20px;
     padding-bottom: 20px;
+
 }
 
 @media (max-width: 1000px){
