Ajustes en el orden de los pedidos

--- a/src/bigBite/css/GestionPedidos.css
+++ b/src/bigBite/css/GestionPedidos.css
@@ -92,8 +92,8 @@
     padding-bottom: 20px;
 }
 
-.estado {
-    padding-top: 15px;
+.estado-entregado {
+    padding-top: 25px;
 }
 
 @media (max-width: 1000px){
