--- a/src/bigBite/css/GestionPedidos.css
+++ b/src/bigBite/css/GestionPedidos.css
@@ -23,10 +23,6 @@
     border: 1px solid black;
 }
 
-.botonescolor:hover {
-    color: white;
-}
-
 .divpedidos {
     display: flex;
     justify-content: space-around;
@@ -48,6 +44,10 @@
     margin-right: 10px;
     font-size: 15px;
     font-family: "Poppins", sans-serif;
+}
+
+.botones:hover {
+    color: white;
 }
 
 .burger {
@@ -96,6 +96,98 @@
 .estado-entregado {
     padding-top: 25px;
     padding-left: 50px;
+}
+
+/* ---modal--- */
+.container-modal {
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    backdrop-filter: blur(4px);
+}
+
+.container-modal-detalles {
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    backdrop-filter: blur(4px);
+}
+
+.div-modal {
+    width: 50vw;
+    height: 45vh;
+    background-color: white;
+    box-shadow: 5px 2px 10px 10px rgba(0, 0, 0, 0.3);
+    border-radius: 0.4rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.container-titulo-modal {
+    width: 100%;
+    text-align: center;
+    padding-top: 3vh;
+}
+
+.container-input-modal {
+    display: flex;
+    justify-content: center;
+}
+
+.container-input-modal input {
+    width: 60%;
+    border: 1px solid grey;
+    padding: 0.4rem;
+    border-radius: 0.4rem;
+}
+
+.container-buttons-modal {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+}
+
+.container-buttons-modal-detalles {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    padding: 0 25px 15px 0;
+}
+
+.button-modal {
+    padding: 0.6rem;
+    border: none;
+    border-radius: 0.4rem;
+    font-size: 2vh;
+}
+
+.div-modal button{
+    width: 15%;
+}
+
+.div-detalles {
+    padding: 10px 30px 0;
+}
+
+.accept {
+    background-color: #ffed49;
+    color: white;
+}
+
+.cancel {
+    background-color: rgb(238, 74, 74);
+    color: white;
 }
 
 @media (max-width: 1000px){
