--- a/src/bigBite/css/navbarRojo.css
+++ b/src/bigBite/css/navbarRojo.css
@@ -73,7 +73,6 @@
 }
 
 
-
 .bi-person-circle {
   font-size: 2.3rem;
 }
@@ -101,6 +100,12 @@
   height: 30px;
   color: white;
   margin-right: 5px;
+}
+
+.salirRojo .bi-box-arrow-left{
+  margin-left: 10px;
+  font-size: 2rem;
+  color: white;
 }
 
 .menu-icon {
