--- a/src/bigBite/css/libroDiario.css
+++ b/src/bigBite/css/libroDiario.css
@@ -8,7 +8,7 @@
     font-size: 24px;
     font-weight: bold;
     color: #fff;
-    background-color: #C00000;
+    background-color: #ffffff;
     padding: 10px 0;
   }
   
@@ -33,4 +33,3 @@
   .libro-diario__tabla td {
     background-color: #f9f9f9;
   }
-  
