--- a/src/bigBite/css/libroMayor.css
+++ b/src/bigBite/css/libroMayor.css
@@ -15,6 +15,7 @@
     border: 1px solid #ddd;
     border-radius: 5px;
     overflow: hidden;
+    
   }
   
   .libro-mayor__nombre-cuenta {
@@ -54,4 +55,6 @@
     color: #b71c1c;
     padding: 10px;
   }
-  
+  .libro-mayor__cuenta h3 {
+    color: #fff;
+  }
