--- a/src/bigBite/css/perfilUsuario.css
+++ b/src/bigBite/css/perfilUsuario.css
@@ -90,7 +90,7 @@
   display: block;
   font-weight: bold;
   margin-bottom: 5px;
-  width: 150px; /* Asegura que todas las etiquetas tengan el mismo ancho */
+  width: 150px;
 }
 
 .input-perfil {
@@ -116,6 +116,11 @@
 
 .svg-editar:hover {
   transform: scale(1.1);
+}
+
+.svg-placeholder {
+  width: 20px;
+  height: 20px;
 }
 
 .btn-cambiar-contrasenia {
@@ -152,11 +157,11 @@
 }
 
 .btn-guardar-perfil:disabled {
-  background-color: #ccc; /* Color de fondo gris claro */
-  color: #888; /* Color de texto gris */
-  cursor: not-allowed; /* Cursor de no permitido */
+  background-color: #ccc;
+  color: #888;
+  cursor: not-allowed;
 }
 
 .btn-guardar-perfil:disabled:hover {
-  background-color: #ccc; /* Mantén el color de fondo gris claro al pasar el cursor */
+  background-color: #ccc;
 }
