--- a/src/bigBite/css/adminProductos.css
+++ b/src/bigBite/css/adminProductos.css
@@ -147,46 +147,32 @@ h2 {
 }
 
 /* Estilos para la previsualización de la imagen */
-.container-product-image{
-  
-  position: relative;
-  display: inline-block;
+.image-preview {
+  width: 100%;
+  height: 150px; /* Puedes ajustar la altura según lo necesites */
+  border: 2px dashed #ccc; /* Estilo del borde */
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #f9f9f9; /* Color de fondo */
+  transition: background-color 0.3s;
+  margin-top: 10px; /* Espacio superior */
 }
 
-.product-image {
-  width: 200px;
-  height: 200px;
-  border-radius: 20%;
+.image-preview p {
+  color: #666;
+}
+
+.image-preview:hover {
+  background-color: #e0e0e0; /* Color de fondo al pasar el mouse */
+}
+
+.imagen-producto {
+  width: 100%;
+  height: 100%;
   object-fit: cover;
-  cursor: pointer;
-  transition: filter 0.3s ease;
-}
-
-.product-image-label {
-  position: relative;
-  display: block;
-}
-
-.product-image-label:hover .product-image {
-  filter: brightness(0.7);
-}
-
-.product-image-overlay {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: rgba(0, 0, 0, 0.5);
-  color: white;
-  display: none;
-  padding: 10px;
-  border-radius: 50%;
-  text-align: center;
-  cursor: pointer;
-}
-
-.product-image-label:hover .product-image-overlay {
-  display: block;
+  border-radius: 5px;
 }
 
 /* Estilos del modal */
